Added a little link to the ticket tracker, mostly to test it out.

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Welcome to Tribuo!.
 
+Help track bugs at http://ravsonic.lighthouseapp.com/projects/18756-tribuo/overview
+
 This is a very rough start for the project, and you'll see more as we go along.
 
 For now, there are few things you'll need to do to get going.
