--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Welcome to Tribuo!.
 Help track bugs at http://ravsonic.lighthouseapp.com/projects/18756-tribuo/overview
 
 This is a very rough start for the project, and you'll see more as we go along.
-
+Many of the initial commits you see will be from me setting up this stranage workflow I'm using for Tribuo.
 For now, there are few things you'll need to do to get going.
 
 You'll need to create a database.yml file that works for you.
